--- a/MacTube/assets/css/style.css
+++ b/MacTube/assets/css/style.css
@@ -1,6 +1,7 @@
 body{
-    background-color: rgb(55, 55, 55);
-    margin: 0;
+    /* background-color: rgb(55, 55, 55); */
+    background-color: black;;
+    margin: 0px 0px 0px 0px;
     padding: 0;
 }
 
@@ -41,24 +42,33 @@ body{
 
 .body-container{
     flex-direction: column;
+    margin-top: 20px;
 }
 
 .template{
-    width: 280px;
+    width: 290px;
     height: 240px;
     border-radius: 20px 20px 0px 0px;
-    box-shadow: 0px 10px 20px 0px #1f1f1f;
+    /* box-shadow: 0px 10px 20px 0px #1f1f1f; */
+    /* box-shadow: 0px 10px 20px 0px #353535; */
     border-radius: 20px;
+}
+
+.template:hover{
+    box-shadow: 0px 10px 20px 0px #353535;
+    transform: scale(1.05);
+    display:block;
 }
 
 .img{
     border-radius: 20px 20px 0px 0px;
-    width: 280px;
+    width: 290px;
     height: 150px;
 }
 
 .header{
     flex-direction: row;
+    margin: 0px 10px 0px 0px;
 }
 
 .profile-img{
@@ -75,7 +85,7 @@ body{
     color: white;
     font-size: 14px;
     text-align: center;
-    width: 280px;
+    width: 290px;
     height: 0px;
     margin: 0px 0px 0px 0px ;
     font-weight: bold;
@@ -101,6 +111,10 @@ body{
     position: relative;
 }
 
+/* .img-container:hover + .progress{
+    display: block;
+} */
+
 span{
     margin-right: 10px;
 }
@@ -120,7 +134,6 @@ span{
 }
 
 .profile-img>img{
-    border-radius: 100%;
     width: 40px;
     height: 40px;
     border-radius: 100%;
@@ -138,8 +151,194 @@ span{
     border-style: solid;
     border-width: .1px;
     border-radius: 5px;
+    padding: 0px 10px;
+}
+
+.search-bar:hover{
+    border-color: white;
+    transition: 0.3s;
 }
 
 .magnifier{
     margin-left: 50px;
+}
+
+.magnifier:hover{
+    color: white;
+    transition: 0.3s;
+}
+
+.prof>img{
+    width: 40px;
+    height: 40px;
+    margin: auto;
+    /* background-image: url('/assets/images/mac.jpg'); */
+    border-radius: 100%;
+    background-size: cover;
+}
+
+.icons{
+    color: rgb(155, 155, 155);
+    margin: auto;
+}
+
+.icons:hover{
+    color: white;
+    transition: 0.3s;
+}
+
+.icon{
+    margin: 10px;
+    width: 100px;
+    justify-content: space-between;
+}
+
+.notifications{
+    color: white;
+    width: 30px;
+    position: relative;
+    margin-right: 10px;
+}
+.red-notifications{
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: red;
+    border-radius: 100%;
+    width: 20px;
+    height: 15px;
+    right: -9px;
+    top: 5px;
+    font-family: 'Arial Narrow Bold', sans-serif;
+    font-size: 10px;
+    position: absolute;
+}
+
+.bars{
+    width: 10px;
+    margin: 10px;
+}
+
+.bars>a{
+    margin: auto;
+    font-size: 25px;
+}
+
+.navbar{
+    top: 0px;
+    left: 0px;
+    right: 20px;
+    width: 300px;
+    height: 100%;
+    display: none;
+    position: absolute;
+    padding: 50px 0px 0px 10px;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.87);
+    box-shadow: 0px 10px 20px 0px #353535;
+}
+
+button{
+    background: none;
+    padding: 0;
+}
+
+.close{
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    color: white;
+}
+
+.close:hover{
+    color:rgb(155, 155, 155);
+}
+
+.tile{
+    left: 200px;
+    right: 30px;
+    top: 200px;
+    width: 300px;
+    height: 55px;
+    font-size: 20px;
+    color: white;
+    align-items: center;
+    font-family: 'Arial Narrow Bold', sans-serif;
+}
+
+.tile:hover{
+    /* box-shadow: 0px 10px 20px 0px #353535; */
+    letter-spacing: .1em;
+}
+
+.shorts{
+    margin-right: 10px;
+}
+
+.search-bar>input{
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    outline-width: 0;
+    color: white;
+    width: 600px;
+}
+
+.search{
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    flex-direction: column;
+}
+
+.results{
+    display: none;
+    flex-direction: column;
+    border-radius: 0px 0px 20px 20px;
+    width: 620px;
+    height: 280px;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.87);
+    top: 44px;
+    z-index: 5;
+    padding: 0px 0px 0px 10px;
+}
+
+.result-tile{
+    width: 620px;
+    height: 55px;
+    font-size: 15px;
+    color:rgb(155, 155, 155);
+    align-items: center;
+    /* justify-content: space-between; */
+    font-family: 'Arial Narrow Bold', sans-serif;
+}
+.result-tile:hover{
+    color: white;
+    letter-spacing: .1em;
+}
+
+.result-icon{
+    font-size: 15px;
+    color: rgb(155, 155, 155);
+}
+
+
+.progress{
+    background-color: red;
+    color: white;
+    padding: 1px;
+    text-align: right;
+}
+
+.ai{
+    width: 40%;
+}
+
+.alan{
+    width: 20%;
+}
+
+.shazam{
+    width: 80%;
 }
